crates/viewer_support/re_dataframe_ui/tests/snapshots/filter_tests__string_contains@ab.snap
---
source: crates/viewer_support/re_dataframe_ui/tests/filter_tests.rs
expression: test_results
---
TestResult {
    filter: String(
        StringFilter {
            operator: Contains,
            query: "a",
        },
    ),
    field: Field {
        name: "column",
        data_type: Utf8,
    },
    unfiltered: StringArray
    [
      "a",
      "b",
      "c",
      "ab",
      "A B",
      "aBc",
    ],
    filtered: StringArray
    [
      "a",
      "ab",
      "A B",
      "aBc",
    ],
}
